fix problems with editing task,overflow text

--- a/src/components/DatePanel/DatePanel.module.scss
+++ b/src/components/DatePanel/DatePanel.module.scss
@@ -1,12 +1,10 @@
-.wrapper {}
-
 .month,
 .year {
-    margin-left: 0.5rem;
-    font-weight: 400;
+  margin-left: 0.5rem;
+  font-weight: 400;
 }
 
 .day {
-    font-size: 1.2rem;
-    font-weight: 700;
+  font-size: 1.2rem;
+  font-weight: 700;
 }
