--- a/src/components/Views/Root.module.scss
+++ b/src/components/Views/Root.module.scss
@@ -6,19 +6,19 @@
 }
 
 body {
-  height: 100vh;
-  width: 100vw;
+  min-height: 100vh;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   font-family: "Montserrat", sans-serif;
   background-color: rgb(130, 235, 175);
+  overflow: hidden;
 }
 
 .wrapper {
   position: relative;
-  min-width: 300px;
-  max-width: 500px;
+  min-width: 280px;
   min-height: 450px;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   padding: 1rem;
